--- a/mail-server/Dockerfile
+++ b/mail-server/Dockerfile
@@ -3,6 +3,6 @@ FROM tvial/docker-mailserver
 MAINTAINER Hauke Mettendorf
 
 # Just add exposed mountpoints
-EXCPOSE["/tmp/spamassassin", "/tmp/postfix", "/ssl"]
+VOLUMES["/tmp/spamassassin", "/tmp/postfix", "/ssl"]
 
 PORTS 25 143 587 993
