--- a/mail-server/Dockerfile
+++ b/mail-server/Dockerfile
@@ -5,4 +5,4 @@ MAINTAINER Hauke Mettendorf
 # Just add exposed mountpoints
 VOLUME ["/tmp/spamassassin", "/tmp/postfix", "/ssl"]
 
-PORT 25 143 587 993
+EXPOSE 25 143 587 993
